fix(header): dynamic header, links & layout breakpoints

--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,4 +1,8 @@
 .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   font-family: var(--font-sans);
   padding: 0.5rem 0;
   margin-bottom: 1em;
@@ -6,28 +10,57 @@
   height: 110px;
 }
 
-.header > h1 {
-  font-size: 2rem;
+.headerContent {
+  width: var(--reading-width);
+}
+
+.headerContent > h1 {
+  font-size: 24px;
   font-weight: 400;
   margin-block-end: 0;
 }
 
-.header > nav {
+.header nav {
   padding: 10px;
   width: 100%;
   z-index: 5;
 
-  background-color: rgb(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.349);
   backdrop-filter: blur(3.5px);
 
+
+  display: flex;
+  justify-content: center;
+}
+
+.navContent {
+  width: var(--reading-width);
   display: flex;
   justify-content: space-between;
-  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .navContent {
+    width: 100%;
+  }
+
+  .headerContent {
+    width: 100%;
+  }
 }
 
 .pinnedNav {
   position: fixed;
   top: 0;
+
+  box-shadow: 0px 4px 21px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 4px 21px 0px rgba(0,0,0,0.1);
+  -moz-box-shadow: 0px 4px 21px 0px rgba(0,0,0,0.1);
+}
+
+.links {
+  display: flex;
+  align-items: flex-end;
 }
 
 .hideLinksBtn {
